--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -27,7 +27,7 @@
 <div>
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
   <% @post_image.post_comments.each do |post_comment| %>
-    <p><%= image_tag('sample-author1.jpg')%></p>
+    <p><%= attachment_image_tag post_comment.user,:profile_image,format:'jpeg',fallback:"no_image.jpg",size:"60x60" %></p>
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d')%><%= post_comment.comment %>
 
