--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h3><%= @user.name %></h3>
-  <%= image_tag('sample-author1.jpg') %>
+  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
   <%if @user.id == current_user.id %>
     <p><%= link_to "プロフィール編集",edit_user_path(@user) %></p>
   <% end %>
@@ -12,7 +12,9 @@
   <%= link_to post_image_path(post_image.id) do %>
     <%= attachment_image_tag post_image, :image %>
   <% end %>
-  <p>投稿ユーザー画像：<%= image_tag('sample-author1.jpg') %></p>
+
+
+  <p>投稿ユーザー画像：<%= attachment_image_tag post_image.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></p>
   <p>ショップ名：<%= post_image.shop_name %></p>
   <p>説明：<%= post_image.caption %></p>
   <p>ユーザーネーム：<%= post_image.user.name %></p>
